# visor-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/visor_app/: __init__.py
src/visor_app/api/: main.py
src/visor_app/api/middleware/: auth.py  sanitize.py
src/visor_app/api/models/: schemas.py
src/visor_app/api/routers/: cerevi_gateway.py  chat.py  config.py  jobs.py  provenance.py  skills.py
src/visor_app/web/: index.html
src/visor_app/web/assets/: app.js  galavi-embed.js  styles.css
src/web/: README.md
